--- a/_config.yml
+++ b/_config.yml
@@ -20,20 +20,20 @@ source-code: https://github.com/CadyFavazzo/cbdemo
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: CB Demo
+title: George
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a template for creating simple digital exhibits
+tagline: practice with collection builder 
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: CollectionBuilder
+author: Cady Favazzo
 
 ##########
 # COLLECTION SETTINGS
 #
 # choose metadata: this is the name of the csv file in your _data directory that describes the objects in your collection
-metadata: demo-metadata 
+metadata: psychiana
 
 ##########
 # GOOGLE SERVICES [optional!]
